# src/main/java/com/bootcamp/customer/controller/CustomerController.java
@@ -10,7 +10,7 @@ import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 @RestController
-@RequestMapping("/api/v/customer")
+@RequestMapping("/api/v1/customer")
 @RequiredArgsConstructor
 public class CustomerController {
 
@@ -33,6 +33,21 @@ public class CustomerController {
     @GetMapping
     public Flux<Customer> findAll(){
         return service.findAll();
+    }
+
+    @PutMapping("/{id}")
+    public Mono<ResponseEntity<Customer>>update (@RequestBody Customer customer, @PathVariable String id){
+        return service.update(id, customer)
+            .map(ResponseEntity::ok)
+            .defaultIfEmpty(ResponseEntity.notFound().build());
+    }
+
+    @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public Mono<ResponseEntity<Customer>> deleteCustomer(@PathVariable String id) {
+        return service.delete(id)
+                .map(ResponseEntity::ok)
+                .defaultIfEmpty(ResponseEntity.notFound().build());
     }
 
 
